# llm-evaluation-pipeline

./: .gitignore  README.md  eval_pipeline.ipynb  pyproject.toml  spec.md
.github/workflows/: ci.yml
output/: report.md  results.json
src/eval_pipeline/: __init__.py  __main__.py  config.py  cost_tracker.py  loader.py  models.py  report.py  schema.py  visualize.py
src/eval_pipeline/judge/: __init__.py  client.py  parser.py  prompt.py
src/eval_pipeline/metrics/: __init__.py  composite.py  deterministic.py
tests/: conftest.py  test_integration.py  test_judge_parser.py  test_pipeline.py  test_report.py  test_schema.py
tests/fixtures/: agent_outputs.jsonl
