[project]
name = "llm-evaluation"
version = "0.1.0"
description = "LLM evaluation pipeline for cybersecurity AI assistant outputs"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "groq>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jupyter>=1.0", "ipykernel>=6.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/eval_pipeline" = "eval_pipeline"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
